# API-Examples

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  HOOKS-GUIDE.md  License  README.kr.md  README.md  README.zh.md  azure-pipelines.yml
Android/APIExample/agora-simple-filter/src/main/cpp/: CMakeLists.txt  agora-simple-filter.cpp  logutils.h
Android/APIExample/agora-simple-filter/src/main/cpp/AgoraRtcKit/: AgoraBase.h  AgoraBaseS.h  AgoraCommonBase.h  AgoraExtensionProviderEntry.h  AgoraExtensionVersion.h  AgoraExtensions.h  AgoraMediaBase.h  AgoraMediaBaseS.h  AgoraMediaCommonBase.h  AgoraMediaPlayerTypes.h  AgoraOptional.h  AgoraRefCountedObject.h  IAgoraFileUploader.h  IAgoraLog.h  IAgoraMediaEngine.h  IAgoraMediaPlayer.h  IAgoraMediaPlayerSource.h  IAgoraParameter.h  IAgoraRtcEngine.h  IAgoraRtcEngineEx.h  IAgoraRtmService.h  IAgoraRtmpStreamingService.h  IAgoraService.h  IAudioDeviceManager.h  NGIAgoraAudioDeviceManager.h  NGIAgoraAudioTrack.h  NGIAgoraCameraCapturer.h  NGIAgoraDataChannel.h  NGIAgoraExtensionControl.h  NGIAgoraExtensionProvider.h  NGIAgoraLocalUser.h  NGIAgoraMediaNode.h  NGIAgoraMediaNodeFactory.h  NGIAgoraRemoteAudioMixerSource.h  NGIAgoraRtcConnection.h  NGIAgoraRtmpConnection.h  NGIAgoraRtmpLocalUser.h  NGIAgoraScreenCapturer.h  NGIAgoraSyncClient.h  NGIAgoraVideoFrame.h  (+2 more)
Android/APIExample/agora-simple-filter/src/main/cpp/AgoraRtcKit/api/: ahpl_ares.h  ahpl_defs.h  ahpl_poll.h  ahpl_ref.h  ahpl_types.h  aosl_ares.h  aosl_defs.h  aosl_ref.h  aosl_types.h
Android/APIExample/agora-simple-filter/src/main/cpp/AgoraRtcKit/api/cpp/: ahpl_ares_class.h  ahpl_poll_class.h  ahpl_ref_class.h  aosl_ares_class.h  aosl_poll_class.h  aosl_ref_class.h
Android/APIExample/agora-simple-filter/src/main/cpp/plugin_source_code/: AudioProcessor.cpp  AudioProcessor.h  EGLCore.cpp  EGLCore.h  ExtensionAudioFilter.cpp  ExtensionAudioFilter.h  ExtensionProvider.cpp  ExtensionProvider.h  ExtensionVideoFilter.cpp  ExtensionVideoFilter.h  JniHelper.cpp  JniHelper.h  VideoProcessor.cpp  VideoProcessor.h  error_code.h  external_thread_pool.cpp  external_thread_pool.h
Android/APIExample/agora-stream-encrypt/src/main/cpp/: CMakeLists.txt  packet_processing_plugin_jni.cpp
Android/APIExample/agora-stream-encrypt/src/main/cpp/include/: packet_processing_plugin_jni.h
Android/APIExample/agora-stream-encrypt/src/main/cpp/include/agora/: AgoraBase.h  AgoraMediaBase.h  AgoraMediaPlayerTypes.h  IAgoraH265Transcoder.h  IAgoraH265TranscoderBase.h  IAgoraH265TranscoderS.h  IAgoraMediaEngine.h  IAgoraMediaEngineBase.h  IAgoraMediaEngineS.h  IAgoraMediaPlayer.h  IAgoraMediaPlayerSource.h  IAgoraMediaRecorder.h  IAgoraMediaRecorderBase.h  IAgoraMediaRecorderS.h  IAgoraMediaStreamingSource.h  IAgoraMusicContentCenter.h  IAgoraParameter.h  IAgoraRhythmPlayer.h  IAgoraRtcEngine.h  IAgoraRtcEngineBase.h  IAgoraRtcEngineEx.h  IAgoraRtcEngineExS.h  IAgoraRtcEngineS.h  IAgoraSpatialAudio.h  IAgoraSpatialAudioBase.h  IAgoraSpatialAudioS.h  IAudioDeviceManager.h
Android/APIExample/agora-stream-encrypt/src/main/cpp/include/agora/rte_base/: rte_cpp_callback_utils.h  rte_cpp_canvas.h  rte_cpp_error.h  rte_cpp_player.h  rte_cpp_rte.h  rte_cpp_string.h
Android/APIExample/lib-stream-encrypt/: .gitignore  CMakeLists.txt  build.gradle
Android/APIExample/lib-stream-encrypt/src/main/: AndroidManifest.xml
Android/APIExample/lib-stream-encrypt/src/main/cpp/: packet_processing_plugin_jni.cpp
Android/APIExample/lib-stream-encrypt/src/main/cpp/include/: packet_processing_plugin_jni.h
Android/APIExample/lib-stream-encrypt/src/main/cpp/include/agora/: AgoraBase.h  AgoraMediaBase.h  AgoraRtcCryptoCppLoader.h  IAgoraMediaEngine.h  IAgoraMediaPlayer.h  IAgoraParameter.h  IAgoraRtcChannel.h  IAgoraRtcEngine.h  IAgoraRtcEngineEx.h  IAgoraSpatialAudio.h
HarmonyOS_NEXT/APIExample/entry/src/main/cpp/: CMakeLists.txt  audio_render.cpp  audio_render.h  custom_audio_render.cpp  custom_audio_render.h  media_metadata.cpp  media_metadata.h  napi_init.cpp  origin_audio_data.cpp  origin_audio_data.h  origin_audio_data_observers.h  origin_video_data.cpp  origin_video_data.h  utils.h
HarmonyOS_NEXT/APIExample/entry/src/main/cpp/include/: AgoraAtomicOps.h  AgoraBase.h  AgoraExtensionVersion.h  AgoraRefCountedObject.h  IAgoraMediaRelayService.h  IAgoraRtcEngine.h  IAgoraRtcEngineEx.h  IAgoraService.h  NGIAgoraAudioDeviceManager.h  NGIAgoraAudioMixerSource.h  NGIAgoraAudioTrack.h  NGIAgoraCameraCapturer.h  NGIAgoraConfigCenter.h  NGIAgoraExtensionAINoiseSuppressor.h  NGIAgoraExtensionAiAec.h  NGIAgoraExtensionControl.h  NGIAgoraExtensionScreenSource.h  NGIAgoraExtensionVQA.h  NGIAgoraLocalUser.h  NGIAgoraMediaNode.h  NGIAgoraMediaNodeFactory.h  NGIAgoraRtcConnection.h  NGIAgoraRtmpLocalUser.h  NGIAgoraScreenCapturer.h  NGIAgoraVideoFrame.h  NGIAgoraVideoMixerSource.h  NGIAgoraVideoTrack.h  PLACEHOLDER
HarmonyOS_NEXT/APIExample/entry/src/main/cpp/include/api/: Makefile  aosl_alloca.h  aosl_angel.h  aosl_async.h  aosl_atomic.h  aosl_audio.h  aosl_byteswap.h  aosl_data.h  aosl_defs.h  aosl_display.h  aosl_dq.h  aosl_errno.h  aosl_fcntl.h  aosl_file.h  aosl_http.h  aosl_input.h  aosl_integer_wrappings.h  aosl_jni.h  aosl_kobj.h  aosl_list.h  aosl_log.h  aosl_marshalling.h  aosl_mm.h  aosl_module.h  aosl_mpq.h  aosl_mpq_fd.h  aosl_mpq_net.h  aosl_mpq_timer.h  aosl_mpqp.h  aosl_os.h  aosl_pmdf.h  aosl_poll.h  aosl_profile.h  aosl_psb.h  aosl_rbtree.h  aosl_ref.h  aosl_route.h  aosl_sbus.h  aosl_so.h  aosl_socket.h  (+10 more)
HarmonyOS_NEXT/APIExample/entry/src/main/cpp/include/api/cpp/: Makefile  aosl_ares_class.h  aosl_async_class.h  aosl_data_class.h  aosl_file_class.h  aosl_input_class.h  aosl_kobj_class.h  aosl_mm_class.h  aosl_mpq_fd_class.h  aosl_mpq_sk_lambda.h  aosl_mpq_timer_lambda.h  aosl_poll_class.h  aosl_ref_class.h  aosl_sbus_class.h  aosl_task_class.h  aosl_thread_class.h  aosl_usage_class.h  aosl_value_class.h
HarmonyOS_NEXT/APIExample/entry/src/main/cpp/include/api/objc/: Makefile  aosl_log.h  aosl_objc.h
HarmonyOS_NEXT/APIExample/entry/src/main/cpp/types/librawdataprocessing/: index.d.ts  oh-package.json5
(+2534 files in other folders)
